--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,8 +1,8 @@
 {
   "name": "frontend",
   "version": "0.0.1",
-  "description": "/",
-  "productName": "/",
+  "description": "duc0044",
+  "productName": "duc0044",
   "author": "duc0044 <truongduc2004ok@gmail.com>",
   "type": "module",
   "private": true,
